--- a/MyJson/MyJson.vcxproj
+++ b/MyJson/MyJson.vcxproj
@@ -110,6 +110,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="leptjson.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="leptjson.c" />
+    <ClCompile Include="test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
